--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/qwq.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>备忘录-Vue3</title>
+    <title>云端博物馆</title>
   </head>
   <body>
     <div id="app"></div>
